Layout fixes - years are now in stars - alignment - font sizes - image size

--- a/css/framework.css
+++ b/css/framework.css
@@ -12,6 +12,10 @@ html {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
