--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,70 @@
 body {
-  margin-bottom: 160px;
-  overflow-x: hidden;
-  font-family: "Open Sans";
-  color: #371854;
-  background: url("../img/squairy_light-yellow.png");
-  background-repeat: repeat;
+	margin-bottom: 160px;
+	overflow-x: hidden;
+	font-family: "Open Sans";
+	font-size: 16px;
+	color: #371854;
+	background: url("../img/squairy_light-yellow.png");
+	background-repeat: repeat;
+}
+
+@media screen and (min-width: 500px) {
+	body {
+		font-size: 21px;
+	}
 }
 
 h1,
 h2,
 h3,
 h4 {
-  position: relative;
-  font-family: "Bree Serif";
+	position: relative;
+	font-family: "Bree Serif";
+}
+
+@media screen and (min-width: 500px) {
+	h1 {
+		font-size: 3.5rem;
+	}
 }
 
 .text-center {
-  text-align: center;
+	text-align: center;
 }
 
 .header {
-  position: relative;
-  width: 100%;
-  color: white;
-  background-color: #371854
+	position: relative;
+	width: 100%;
+	color: white;
+	background-color: #371854
 }
 
 .header__title {
-  padding-top: .67em;
+	padding-top: .67rem;
+}
+
+.star {
+	position: relative;
+	display: inline-block;
+	max-height: 2rem;
+}
+
+.star i {
+	font-size: 2rem;
+}
+
+.star__year {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	display: block;
+	font-size: .6rem;
+	color: white;
+	transform: translate(-50%, -50%);
+}
+
+.card {
+	margin-bottom: 3rem;
 }
 
 
@@ -81,12 +118,19 @@ section#links {
 */
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  min-height: 60px;
-  padding-top: 20px;
-  margin-bottom: 0;
-  color: white;
-  background-color: #291240;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	min-height: 60px;
+	padding-top: 20px;
+	margin-bottom: 0;
+	color: white;
+	background-color: #291240;
+}
+
+
+/* Overrides */
+
+.img-responsive {
+	min-width: 100%;
 }
